// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/HeaderFooterTemplate should match snapshot with about link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <div
      className="footer-push"
    />
  </div>
  <div
    className="row footer"
  >
    <div
      className="footer-pane col-xs-12"
    >
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-site-name"
        >
          Mattermost
        </span>
      </div>
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-link copyright"
        >
          © 2015-2017 Mattermost, Inc.
        </span>
        <a
          className="pull-right footer-link"
          href="http://testaboutlink"
          id="about_link"
          key="about_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.about"
            values={Object {}}
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with all links 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <div
      className="footer-push"
    />
  </div>
  <div
    className="row footer"
  >
    <div
      className="footer-pane col-xs-12"
    >
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-site-name"
        >
          Mattermost
        </span>
      </div>
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-link copyright"
        >
          © 2015-2017 Mattermost, Inc.
        </span>
        <a
          className="pull-right footer-link"
          href="http://testhelplink"
          id="help_link"
          key="help_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.help"
            values={Object {}}
          />
        </a>
        <a
          className="pull-right footer-link"
          href="http://testtermsofservicelink"
          id="terms_link"
          key="terms_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.terms"
            values={Object {}}
          />
        </a>
        <a
          className="pull-right footer-link"
          href="http://testprivacypolicylink"
          id="privacy_link"
          key="privacy_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.privacy"
            values={Object {}}
          />
        </a>
        <a
          className="pull-right footer-link"
          href="http://testaboutlink"
          id="about_link"
          key="about_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.about"
            values={Object {}}
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with children 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <p>
      test
    </p>
    <div
      className="footer-push"
    />
  </div>
  <div
    className="row footer"
  >
    <div
      className="footer-pane col-xs-12"
    >
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-site-name"
        >
          Mattermost
        </span>
      </div>
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-link copyright"
        >
          © 2015-2017 Mattermost, Inc.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with help link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <div
      className="footer-push"
    />
  </div>
  <div
    className="row footer"
  >
    <div
      className="footer-pane col-xs-12"
    >
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-site-name"
        >
          Mattermost
        </span>
      </div>
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-link copyright"
        >
          © 2015-2017 Mattermost, Inc.
        </span>
        <a
          className="pull-right footer-link"
          href="http://testhelplink"
          id="help_link"
          key="help_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.help"
            values={Object {}}
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with privacy policy link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <div
      className="footer-push"
    />
  </div>
  <div
    className="row footer"
  >
    <div
      className="footer-pane col-xs-12"
    >
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-site-name"
        >
          Mattermost
        </span>
      </div>
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-link copyright"
        >
          © 2015-2017 Mattermost, Inc.
        </span>
        <a
          className="pull-right footer-link"
          href="http://testprivacypolicylink"
          id="privacy_link"
          key="privacy_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.privacy"
            values={Object {}}
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot with term of service link 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <div
      className="footer-push"
    />
  </div>
  <div
    className="row footer"
  >
    <div
      className="footer-pane col-xs-12"
    >
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-site-name"
        >
          Mattermost
        </span>
      </div>
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-link copyright"
        >
          © 2015-2017 Mattermost, Inc.
        </span>
        <a
          className="pull-right footer-link"
          href="http://testtermsofservicelink"
          id="terms_link"
          key="terms_link"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            id="web.footer.terms"
            values={Object {}}
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot without children 1`] = `
<div
  className="inner-wrap"
>
  <div
    className="row content"
  >
    <div
      className="footer-push"
    />
  </div>
  <div
    className="row footer"
  >
    <div
      className="footer-pane col-xs-12"
    >
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-site-name"
        >
          Mattermost
        </span>
      </div>
      <div
        className="col-xs-12"
      >
        <span
          className="pull-right footer-link copyright"
        >
          © 2015-2017 Mattermost, Inc.
        </span>
      </div>
    </div>
  </div>
</div>
`;
